# gambito-neural-tcc

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
backend/src/: main.py
backend/src/controllers/: create_account.py  genai_chess_controller.py  genai_controller.py  user_crud.py
backend/src/core/: chess_engine.py  langchain_config.py
backend/src/db/: db_connection.py
backend/src/models/: User.py
backend/src/prompts/: core_prompt.py
backend/src/repositories/: user_repository.py
backend/src/routes/: account.py  games_routes.py  genai_routes.py  me.py  send_moves.py  studies_routes.py  user_routes.py
backend/src/schemas/: chart.py  game_data.py  moves.py  user.py  user_message_schema.py
backend/src/services/: auth.py  chart_service.py  create_account.py  game_history_service.py  genai.py  insert_user.py
backend/tests/api/: test_health.py
frontend/neural-gambit-frontend/: middleware.ts  package-lock.json  package.json
frontend/neural-gambit-frontend/app/: globals.css  layout.tsx  page.tsx
frontend/neural-gambit-frontend/app/activate/: page.tsx
frontend/neural-gambit-frontend/app/api/: interface.ts
frontend/neural-gambit-frontend/app/dashboard/: chatSidebar.tsx  page.tsx  profilePage.tsx  settingsPage.tsx
frontend/neural-gambit-frontend/app/email/: page.tsx
frontend/neural-gambit-frontend/app/features/: page.tsx
frontend/neural-gambit-frontend/app/login/: page.tsx
frontend/neural-gambit-frontend/components/: features.tsx  login.tsx  signup.tsx
frontend/src/: main.py
(+20 files in other folders)
